z-index fixes for dialogs and dialog shields, now they are on top of
navigator, this practically prevents multiple dialogs at once

--- a/libsrc/scss/dialogs.scss
+++ b/libsrc/scss/dialogs.scss
@@ -13,7 +13,7 @@
   position:fixed;
   width:100%;
   height:100%;
-  z-index: 2;
+  z-index: 7;
   top: 0;
 }
 #dialog_shield.fade { background-color:black; opacity:0.6; }
@@ -24,7 +24,7 @@ $header_font: Museo, Helvetica, Arial, sans-serif;
 .dialog { 
   display: none; 
   position:absolute;
-  z-index: 3; 
+  z-index: 8; 
   width: 500px;
   background-color : white;
   -moz-box-shadow: 05px 05px 05px #666;
@@ -398,7 +398,7 @@ $header_font: Museo, Helvetica, Arial, sans-serif;
 .newdialog {
     display: none; 
     position: absolute;
-    z-index: 5;
+    z-index: 8;
     max-width: 700px;
     padding: 20px;
     background-color : white;
